Update to styles and words for 1

--- a/assets/css/gitstyle.css
+++ b/assets/css/gitstyle.css
@@ -67,6 +67,9 @@ h1{
     max-width: 100%;
 }
 
+.active-link{
+  background: rgb(140,29,64,0.09);
+}
 
 /*https://codesandbox.io/s/github/nuxt/nuxt.js/tree/dev/examples/routes-transitions?from-embed*/
 .container {
